[tool.poetry]
name = "pytezos-core"
version = "1.0.0rc1"
description = "Python toolkit for Tezos"
license = "MIT"
authors = [
    "Michael Zaikin <mz@baking-bad.org>",
    "Arthur Breitman",
    "Roman Serikov",
    "Lev Gorodetskiy <github@droserasprout.space>",
]
maintainers = [
    "Michael Zaikin <mz@baking-bad.org>",
    "Lev Gorodetskiy <github@droserasprout.space>",
]
readme = "README.md"
repository = "https://github.com/baking-bad/pytezos-core"
homepage = "https://pytezos.org"
keywords = ['tezos', 'blockchain', 'sdk', 'michelson', 'repl', 'cryptocurrencies', 'smart-contracts']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
packages = [
    { include = "pytezos_core", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
base58 = "^2.1.1"
fastecdsa = "^2.2.3"
mnemonic = "^0.20"
pyblake2 = "^1.1.2"
pysodium = "^0.7.10"
secp256k1 = "^0.14.0"


[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
bump2version = "^1.0.1"
diff-cover = "^6.5.0"
flake8-return = "^1.1.3"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.1.11"
flake8-simplify = "^0.19.2"
flakeheaven = "^3.0.0"
isort = "^5.9.3"
mypy = "^0.971"
parameterized = "^0.8.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = true

[tool.flakeheaven]
format = "colored"
max_line_length = 120
show_source = true
extended_default_ignore = []

[tool.flakeheaven.plugins]
"flake8-*" = ["+*", "-C417", "-SIM106", "-SIM114", "-SIM102", "-R504"]
flake8-docstrings = ["-*"]

[build-system]
requires = [
    "poetry-core",
    "cryptography",
]
build-backend = "poetry.core.masonry.api"
